[#54] Add game drawing logic
